[package]
name = "fetchttp"
version = "1.0.0"
edition = "2021"
description = "`fetch` Web API Implementation In Rust!"
license = "MIT"
authors = ["MuntasirSZN <muntasir.joypurhat@gmail.com>"]
repository = "https://github.com/MuntasirSZN/fetchttp"
documentation = "https://docs.rs/fetchttp"
readme = "README.md"
keywords = ["fetch", "http", "client"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
http = "1.0"
bytes = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt", "time", "macros"], default-features = false }
hyper = { version = "1.7", features = ["client", "http1", "http2"], default-features = false }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"], default-features = false }
hyper-tls = { version = "0.6", default-features = false }
http-body-util = "0.1"

[dev-dependencies]
wiremock = "0.6"
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
iai-callgrind = "0.16.1"
futures = "0.3"
cargo-nextest = "0.9.106"
tokio-test = "0.4"

[[bench]]
name = "fetch_bench"
harness = false

[[bench]]
name = "iai_bench"
harness = false

[profile.release]
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true
strip = false
